--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     border-radius: 10px;
 }
 
-#reveal{
+#input{
     width: 88%;
     height: 35px;
     margin-right: 10px;
@@ -28,6 +28,7 @@
     border-radius: 5px;
     padding-left: 10px;
     margin-bottom: 40px;
+    outline: none;
 }
 
 .add-btn{
@@ -38,18 +39,16 @@
     color: white;
 }
 
-#d-btn{
+#delete-btn{
     padding: 5px;
     border-radius: 5px;
     background-color: rgb(0, 81, 255);
     cursor: pointer;
+    color: white;
 }
 
 
 .dis{
-    /* display: flex;
-    align-items: center;
-    justify-content: space-between; */
     border: 1px solid grey;
     height: 35px;    
     margin-top: 20px;
