--- a/style.css
+++ b/style.css
@@ -48,15 +48,33 @@
 }
 
 
-.dis{
+.display{
     border: 1px solid grey;
-    padding: 5px;   
+    padding: 5px 10px;   
     margin-top: 20px;
     margin-bottom: 10px;
     background-color: rgb(165, 218, 206);
     border-radius: 5px;
-    padding: 5px 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-align: left;
+    flex-wrap: wrap;
+}
+
+#arrayItem{
+    background-color: red;
+    width: 50%;
+    height: 50px;
+    /* overflow: hidden; */
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.todo-list{
+    font-size: 25px;
+    font-weight: bold;
+    padding: 20px 0;
 }
