--- a/style.css
+++ b/style.css
@@ -20,18 +20,21 @@
     border-radius: 10px;
 }
 
-#input{
+#input,
+#input-edit{
     width: 88%;
     height: 35px;
     margin-right: 10px;
     border: 1px solid blue;
     border-radius: 5px;
     padding-left: 10px;
-    margin-bottom: 40px;
     outline: none;
 }
 
-.add-btn{
+.add-btn,
+.done-btn,
+#delete-btn,
+#edit-btn{
     padding: 10px;
     border-radius: 5px;
     background-color: rgb(0, 81, 255);
@@ -40,11 +43,16 @@
 }
 
 #delete-btn{
-    padding: 5px;
-    border-radius: 5px;
-    background-color: rgb(0, 81, 255);
-    cursor: pointer;
-    color: white;
+    padding: 10px;    
+}
+
+#edit-btn{
+    padding: 10px;
+    background-color: rebeccapurple;
+}
+
+.done-btn{
+    background-color: green;
 }
 
 
@@ -72,4 +80,29 @@
     font-size: 25px;
     font-weight: bold;
     padding: 20px 0;
+}
+
+.edit-container{
+    text-align: left;
+}
+
+.edit-container p{
+    background-color: rebeccapurple;
+    color: white;
+    width: fit-content;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+#showStatusMessage{
+    text-align: left;
+    margin: 5px;
+}
+
+#success-message{
+    color: green;
+}
+
+#error-message{
+    color: red;
 }
