was able to successfully added a function edit button that promts a new input box with the element that needs editing, after modifying the element, then a done button is there to get the index of the particular element and edit it using the splice() menthod

--- a/style.css
+++ b/style.css
@@ -82,11 +82,11 @@
     padding: 20px 0;
 }
 
-.edit-container{
+#edit-container{
     text-align: left;
 }
 
-.edit-container p{
+#edit-container p{
     background-color: rebeccapurple;
     color: white;
     width: fit-content;
