I was able to make all my todo list to be showing on the screen even on reload of the browser, I also did some styling

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
     border-radius: 10px;
 }
 
+.overf{
+    overflow: auto;
+    height: 80vh;
+    padding-bottom: 20px;
+}
+
 #input,
 #input-edit{
     width: 88%;
