I adjusted the overflow box height and also gave the small container that contains the overflow box an height of 80vh, I also set the overflow scroll bar to display none

--- a/style.css
+++ b/style.css
@@ -13,16 +13,19 @@
 }
 
 .small-container{
-    padding: 20px;
+    padding: 0 20px;
+    margin-top: 30px;
     width: 50%;
     background-color: white;
     text-align: center;
     border-radius: 10px;
+    height: 80vh;
 }
 
 .overf{
     overflow: auto;
-    height: 80vh;
+    height: 50vh;
+    margin-bottom: 20px;
     padding-bottom: 20px;
 }
 
@@ -111,4 +114,8 @@
 
 #error-message{
     color: red;
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
